# seqmat

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  config.json.example  pyproject.toml  requirements.txt  setup.py  test_comprehensive.py
.github/workflows/: docs.yml  test.yml
benchmarks/: bench_position_lookup.py  bench_sequence_ops.py
docs/: SETUP.md
examples/: README.md  kras_g12d_analysis.ipynb  seqmat_vs_biopython.ipynb
scripts/: README.md  convert_conservation_to_db.py  copy_mm39_conservation_from_old_bucket.sh  upload_prebuilt_to_s3.sh
seqmat/: __init__ 2.py  __init__.py  _io.py  cli.py  config 2.py  config.py  conservation.py  data_setup.py  discovery.py  download.py  errors.py  gene.py  gtf.py  lmdb_store.py  locator.py  seqmat.py  sqlite_store.py  transcript.py  utils 2.py  utils.py
seqmat.egg-info/: PKG-INFO  requires.txt
tests/: bench_gene_creation.py  test_gene.py  test_locator.py  test_seqmat.py
