[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seqmat"
version = "1.5.0"
description = "Fast, vectorized genomic sequences with first-class mutation tracking."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Nicolas Lynn Vila", email = "nicolasalynn@gmail.com" }]
keywords = [
    "bioinformatics",
    "genomics",
    "sequence",
    "mutation",
    "splicing",
    "transcript",
    "hg38",
    "mm39",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0,<3",
    "pandas>=2.2.0,<3",
    "pyarrow>=15.0.0",
    "pysam>=0.19.0",
    "requests>=2.26.0",
    "tqdm>=4.62.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
lmdb = ["lmdb>=1.4.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/nicolasalynn/seqmat"
Repository = "https://github.com/nicolasalynn/seqmat"
Issues = "https://github.com/nicolasalynn/seqmat/issues"
Changelog = "https://github.com/nicolasalynn/seqmat/blob/main/CHANGELOG.md"

[project.scripts]
seqmat = "seqmat.cli:main"
seqmat-setup = "seqmat.cli:main"  # legacy alias

[tool.setuptools.packages.find]
include = ["seqmat*"]
exclude = ["tests*", "examples*", "scripts*", "docs*"]

[tool.setuptools.package-data]
seqmat = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
